frontend/k8s/deployments/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-manager-ingress-http
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: mytaskmanager.duckdns.org
    http:
      paths:
      - path: /.well-known/acme-challenge
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service
            port:
              number: 80
