frontend/k8s/deployments/ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-manager-ingress-https
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # Add this annotation
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: mytaskmanager.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 4000
  tls:
  - hosts:
    - mytaskmanager.duckdns.org
    secretName: taskmanager-tls
